# AI-Content-Automation-Engine

./: .flake8  .gitignore  README.md  models.txt  pyproject.toml  pyrightconfig.json
flows/image_content_generator/: ideas_tracking.db
flows/image_content_generator/pipeline/: main.py  pipeline.py  schemas.py  storage_csv.py  storage_sqlite.py
flows/image_content_generator/pipeline/prompt_base/: manager.py
flows/image_content_generator/pipeline/prompt_shorts/: manager.py
flows/image_content_generator/pipeline/prompt_shorts/eco_colapso/: __init__.py  constants.py  models.py
scratch/: analyze_production.py  archive_30_33.py  check_ids.py  check_progress.py  check_queue.py  exchange_yt_token.py  final_cleanup.py  finish_pending.py  fix_missing_jsons.py  generate_status_report.py  generate_yt_url.py  get_completed.py  inject_urgent.py  insert_new_ideas.py  inspect_sdk.py  migrate_to_sqlite.py  rescue_drive_videos.py  reset_low_quality.py  start_veo_production.py  sync_drive_db.py  sync_scheduler_yt.py  sync_youtube_db.py
tools/common/: messenger.py
tools/image_generation/: gemini.py
tools/text_generation/: gemini.py  seo_prompts.py
tools/utils/: google_drive.py  scheduler.py  youtube_uploader.py
tools/video_editing/: ffmpeg.py  whisper.py
tools/video_generation/: gemini_veo.py
